# DayPlanner

./: .gitignore  CMakeLists.txt
inc/: lv_tasks_model.h  passwordUtils.h  reg.h  reg_handler.h  task.h  task_handler.h  user.h
inc/reg_log/: reg.h
inc/sql/: pgconn.h  user_query.h
inc/utils/: passwordUtils.h
src/: lv_tasks_model.cpp  main.cpp  passwordUtils.cpp  pgconn.cpp  reg.cpp  reg_handler.cpp  task.cpp  task_handler.cpp  user.cpp
src/sql/: pgconn.cpp  user_query.cpp
src/utils/: passwordUtils.cpp
ui/: _resources.qrc  adminPannel.qml  dayPlanner.qrc  deletedTasks.qml  login.qml  main.qml  main.qrc  newwin.qml  photoWin.qml  profile.qml  resources.qrc  taskAddition.qml  taskEditor.qml  tasks.qml
ui/components/: AddPhoto.qml  AddTask.qml  AdminButton.qml  CompChoose.qml  ConfimButton.qml  DelTasksButton.qml  ExitButton.qml  NameInput.qml  OpenPhoto.qml  ProfileButton.qml  RedTask.qml  RemTask.qml  SaveButton.qml  SortByComp.qml  Status.qml  Task.qml  TextTimeInput.qml  TimeChoose.qml  reg.qml
